Fix white space for narration

--- a/ui-super-heroes/src/main/webui/src/styles.css
+++ b/ui-super-heroes/src/main/webui/src/styles.css
@@ -174,5 +174,6 @@ td {
   font-weight: lighter;
   font-size: small;
   text-align: justify;
+  white-space: pre-wrap;
 }
 
